components/pipelines-as-a-service/minimal/app1-gitops/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: java-maven
  name: java-maven
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: java-maven
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: demo-app1
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/pipelines-minimal/demo-app1
        imagePullPolicy: Always
        name: java-maven
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
