components/pipelines-as-a-service/minimal/app1-gitops/app-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-app1
  name: demo-app1
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: demo-app1
  sessionAffinity: None
  type: ClusterIP
