components/pipelines-as-a-service/minimal/app1-gitops/app-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: demo-app1
  name: demo-app1
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: demo-app1
    weight: 100
  wildcardPolicy: None
